Implement Git repository foundation
Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>